# burgtheater-event-crawler

./: README.md  events.py  main.py  make_csv.py  persons.py  pyproject.toml  years.py
data/: events.csv  persons.csv  persons.json  persons_enriched.csv
data/calendar/: 1850.json  1851.json  1852.json  1853.json  1854.json  1855.json  1856.json  1857.json  1858.json  1859.json  1860.json  1861.json  1862.json  1863.json  1864.json  1865.json  1866.json  1867.json  1868.json  1869.json  1870.json  1871.json  1872.json  1873.json  1874.json  1875.json  1876.json  1877.json  1878.json  1879.json  1880.json  1881.json  1882.json  1883.json  1884.json  1885.json  1886.json  1887.json  1888.json  1889.json  (+48 more)
utils/: __init__.py
